# AFW

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
afw/: Cargo.toml
afw-common/: Cargo.toml
afw-common/src/: lib.rs
afw-ebpf/: Cargo.toml
afw-ebpf/src/: main.rs
afw/src/: banner.rs  block_log.rs  cli.rs  config.rs  daemon.rs  ebpf_loader.rs  ipc.rs  lib.rs  main.rs  nft.rs  notify.rs  state.rs
afw/tests/: cli_tests.rs  config_tests.rs  ebpf_tests.rs  nft_tests.rs  owasp_tests.rs  state_tests.rs  validation_tests.rs
config/: afw.toml
config/conf.d/: browsers.toml  communication.toml  creative.toml  development.toml  file_transfer.toml  gaming.toml  media.toml  package_managers.toml  productivity.toml  remote_desktop.toml  security.toml  system_services.toml  virtualization.toml  vpn_clients.toml
pkg/: PKGBUILD
pkg/deb/debian/: changelog  conffiles  control  postinst  postrm  rules
pkg/rpm/: afw.spec
systemd/: afw.service
xtask/: Cargo.toml
xtask/src/: main.rs
