[package]
name = "afw"
version = "0.3.0"
edition = "2021"
description = "Application Firewall - eBPF process monitoring with dynamic nftables rules"
license = "GPL-3.0-or-later"

[dependencies]
afw-common = { path = "../afw-common", features = ["user"] }
aya = "0.13"
aya-log = "0.2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
nix = { version = "0.29", features = ["signal", "user", "process"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
